[package]
name = "lsrt"
version = "0.1.0"
authors = ["Jan De Landtsheer <jan@delandtsheer.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical-sort = "*"
structopt = { version = "*", features = [ "paw" ] }
paw = "*"
anyhow ="*"

async-std = "*"
futures = "*"